BUG#19188: incorrect temporary table name of DROP query in replication

manual merge to account 5.0 specific names of TABLE class